--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.security.user.password=kkr
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/loginDB
 spring.datasource.username=postgres
-spring.datasource.password=Rajkkr@13
+spring.datasource.password=password
 
 # spring.security.oauth2.client.registration.google.client-id
 # spring.security.oauth2.client.registration.google.client-secret
